Bug 1502346 - Retrieve ::slotted rules in InspectorUtils getCSSStyleRules. r=emilio, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D14759

--HG--
extra : source : 7acbf06c74dcfe47e69d1c855f1ad3fa2c97f0e1